updated titles and home link;

--- a/templates/widget/index.html
+++ b/templates/widget/index.html
@@ -19,9 +19,9 @@
 </head>
 <body class="strossle">
   <main>
-    <a href="/">Go Home</a>
+    <a href="https://strossle.showmead.xyz">Go Home</a>
     <h1 class="body-main-title">Welcome to <span class="accent">${widget_name}</span> test pages</h1>
-    <h3><a href="https://factory.strossle.com/widgets/${widget_id}" target="_blank" rel="noopener noreferrer">Got to Factory - ${widget_id}</a></h3>
+    <h3><a href="https://factory.strossle.com/widgets/${widget_id}" target="_blank" rel="noopener noreferrer">Factory - ${widget_id}</a></h3>
     <div class="test-case">
       <div class="strossle-widget"></div>
     </div>
